; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_mime.c_qpquote.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_mime.c_qpquote.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@qpbase = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @qpquote to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qpquote(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @luaL_addchar(i32* %5, i8 signext 61)
  %7 = load i32*, i32** %4, align 8
  %8 = load i8*, i8** @qpbase, align 8
  %9 = load i32, i32* %3, align 4
  %10 = ashr i32 %9, 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds i8, i8* %8, i64 %11
  %13 = load i8, i8* %12, align 1
  %14 = call i32 @luaL_addchar(i32* %7, i8 signext %13)
  %15 = load i32*, i32** %4, align 8
  %16 = load i8*, i8** @qpbase, align 8
  %17 = load i32, i32* %3, align 4
  %18 = and i32 %17, 15
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i8, i8* %16, i64 %19
  %21 = load i8, i8* %20, align 1
  %22 = call i32 @luaL_addchar(i32* %15, i8 signext %21)
  ret void
}

declare dso_local i32 @luaL_addchar(i32*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
